add logo & email setting using formspree

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg fixed-top bg-transparent" id="home-nav-scroll">
         <!-- Image and text -->
         <a class="navbar-brand" href="#home" style="font-weight: bold;">
-            <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="img/logo/rantau media fix.png" width="50" class="d-inline-block align-top logo" alt="">
             <span class="media-text" id="red-text">RANTAUMEDIA.COM</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,11 +36,6 @@
                         Home
                     </a>
                 </li>
-                <li class="nav-item" id="portfolio-pos">
-                    <a class="nav-link page-scroll" href="#portfolio">
-                        Portfolio
-                    </a>
-                </li>
                 <li class="nav-item" id="about-pos">
                     <a class="nav-link page-scroll about-click" href="#about">
                         about us
@@ -49,6 +44,11 @@
                 <li class="nav-item" id="process-pos">
                     <a class="nav-link page-scroll" href="#process">
                         Process
+                    </a>
+                </li>
+                <li class="nav-item" id="portfolio-pos">
+                    <a class="nav-link page-scroll" href="#portfolio">
+                        Portfolio
                     </a>
                 </li>
                 <li class="nav-item" id="contact-pos">
@@ -69,7 +69,7 @@
         </p>
         <hr>
         <p class="jumbotron-quote" id="jumbotron-sm-quote">PROFESSIONAL <i class="fas fa-angle-double-right"></i> FRIENDLY <i class="fas fa-angle-double-right"></i> SUITABLE</p>
-        <a class="btn btn-lg cta-btn" href="#contact" role="button">Contact Us</a>
+        <a class="btn btn-lg cta-btn mt-2" href="#contact" role="button">Contact Us</a>
     </div>
     <!-- END OF BANNER -->
     <!-- ==================================================================== -->
@@ -275,8 +275,8 @@
                 </div>
                 <!-- contact form -->
                 <div class="col-md-6 contact-form">
-                    <article action="http://formspree,io/yoga.nugroho129@gmail.com" method="POST" class="contact-form">
-                        <form action="" class="form-group">
+                    <article class="contact-form">
+                        <form action="http://formspree.io/yoga.nugroho129@gmail.com" method="POST" class="form-group">
                             <div class="row">
                                 <div class="col pl-1">
                                     <input type="text" name="name" placeholder="name" class="form-control rounded-0">
