add meta for formspree trial

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="origin">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gupter:400,700|Montserrat:200,400,600&display=swap" rel="stylesheet">
     <!-- font awesome -->
