add smooth scroll effect & footer link to linkedin

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </p>
         <hr>
         <p class="jumbotron-quote" id="jumbotron-sm-quote">PROFESSIONAL <i class="fas fa-angle-double-right"></i> FRIENDLY <i class="fas fa-angle-double-right"></i> SUITABLE</p>
-        <a class="btn btn-lg cta-btn mt-2" href="#contact" role="button">Contact Us</a>
+        <a class="btn btn-lg cta-btn mt-2 page-scroll" href="#contact" role="button">Contact Us</a>
     </div>
     <!-- END OF BANNER -->
     <!-- ==================================================================== -->
@@ -129,7 +129,7 @@
             <div class="cta-text">
                 <p>Let's Talk About <span style="font-weight: bold; text-align: left;">Improving</span> Your <span style="font-weight: bold;">Bussiness,<br>Today!</span></p>
             </div>
-            <a class="btn btn-lg cta-btn" href="#contact" role="button" style="width: 170px !important;">Contact Us</a>
+            <a class="btn btn-lg cta-btn page-scroll" href="#contact" role="button" style="width: 170px !important;">Contact Us</a>
         </div>
     </section>
     <!-- END OF CTA -->
@@ -277,7 +277,7 @@
                 <!-- contact form -->
                 <div class="col-md-6 contact-form">
                     <article class="contact-form">
-                        <form action="http://formspree.io/yoga.nugroho129@gmail.com" method="POST" class="form-group">
+                        <form action="http://formspree.io/hariman@rantaumedia.com" method="POST" class="form-group">
                             <div class="row">
                                 <div class="col pl-1">
                                     <input type="text" name="name" placeholder="name" class="form-control rounded-0">
@@ -302,7 +302,7 @@
     <!-- END OF CONTACT -->
     <!-- ==================================================================== -->
     <footer>
-        <p>Copyright &copy; 2019 - rantaumedia.com<br>Design & Develop by Yoga Isnaini Nugroho</p>
+        <p>Copyright &copy; 2019 - rantaumedia.com<br>Design & Develop by <a href="https://www.linkedin.com/in/yoga-isnaini-nugroho-473b62152/" target="blank">Yoga Isnaini Nugroho</a></p>
     </footer>
     <!-- my js -->
     <script src="js/script.js"></script>
